Fixed setup and CMakeLists to build on unix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,15 +89,15 @@ add_executable(compute_gist ${SOURCE_FILES})
 #SET_TARGET_PROPERTIES(compute_gist PROPERTIES COMPILE_FLAGS "-DUSE_GIST -DSTANDALONE_GIST")
 
 ########################################
-message("FFTW_LIB  = ${FFTW_LIB}")
-message("FFTW_PATH = ${FFTW_PATH}")
-message("FFTW_INCLUDE_DIR = ${FFTW_INCLUDE_DIR}")
-message("FFTW_LIBRARIES = ${FFTW_LIBRARIES}")
-message("M_LIB = ${M_LIB}")
-message("CMAKE_C_FLAGS = ${CMAKE_C_FLAGS}")
-message("CMAKE_CXX_FLAGS = ${CMAKE_CXX_FLAGS}")
-message("CMAKE_SHARED_LINKER_FLAGS = ${CMAKE_SHARED_LINKER_FLAGS}")
-message("CMAKE_EXE_LINKER_FLAGS = ${CMAKE_EXE_LINKER_FLAGS}")
+#message("FFTW_LIB  = ${FFTW_LIB}")
+#message("FFTW_PATH = ${FFTW_PATH}")
+#message("FFTW_INCLUDE_DIR = ${FFTW_INCLUDE_DIR}")
+#message("FFTW_LIBRARIES = ${FFTW_LIBRARIES}")
+#message("M_LIB = ${M_LIB}")
+#message("CMAKE_C_FLAGS = ${CMAKE_C_FLAGS}")
+#message("CMAKE_CXX_FLAGS = ${CMAKE_CXX_FLAGS}")
+#message("CMAKE_SHARED_LINKER_FLAGS = ${CMAKE_SHARED_LINKER_FLAGS}")
+#message("CMAKE_EXE_LINKER_FLAGS = ${CMAKE_EXE_LINKER_FLAGS}")
 
 #target_link_libraries(gist -DUSE_GIST -DSTANDALONE_GIST)
 
